--- a/src/CalendarWidget.css
+++ b/src/CalendarWidget.css
@@ -74,3 +74,7 @@
   background-color: #c0d9af; /* Korostusväri nykyiselle päivälle */
   font-weight: bold; /* Esimerkiksi lihavoitu teksti */
 }
+.selected-day {
+  background-color: #ffeb99; /* Vaalea keltainen tausta */
+  border: 2px solid #ffcc00;
+}
